# Project_CourseTask

./: .gitignore  Build.sh  CMakeLists.txt  Run.sh  RunTests.sh
Adder/: CMakeLists.txt  Example.cpp  Example.hpp
src/: main.cpp
tests/: CMakeLists.txt  ExampleTests.cpp
